# zelda-clone

./: .gitignore  CMakeLists.txt  Readme.md  vcpkg.json
.github/agents/: planning.agent.md
engine/: CMakeLists.txt
engine/core/: Clock.cpp  Clock.h  Config.h
engine/ecs/: Components.h  HierarchySystem.cpp  HierarchySystem.h  MovementSystem.cpp  MovementSystem.h  RenderSystem.cpp  RenderSystem.h
engine/game/: Game.cpp  Game.h  GameObject.cpp  GameObject.h  Transform.h
engine/graphics/: GraphicsContext.h  GraphicsEngine.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  SpriteSheet.cpp  SpriteSheet.h  Texture.cpp  Texture.h
engine/graphics/opengl/: OpenGLContext.cpp  OpenGLContext.h  OpenGLGraphicsEngine.cpp  OpenGLGraphicsEngine.h  OpenGLRenderer.cpp  OpenGLRenderer.h
engine/input/: InputManager.cpp  InputManager.h  KeyCode.h
engine/shaders/: fragment.glsl  sprite_fragment.glsl  sprite_vertex.glsl  vertex.glsl
engine/window/: SDLWindow.cpp  SDLWindow.h  Window.h
src/: main.cpp
src/engine/input/: InputManager.cpp  InputManager.h
